Added project section rendering, included description and learning outcome into project sections, added buttons to return to project title and to profile introduction

--- a/portfolio/src/styles/styles.css
+++ b/portfolio/src/styles/styles.css
@@ -22,6 +22,14 @@
   width: auto;
 }
 
+.project-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  row-gap: 20px;
+}
+
 /* file import */
 /* common */
 /* components *//*# sourceMappingURL=styles.css.map */
